@@ -8,6 +8,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static org.metadatacenter.artifacts.model.core.ValidationHelper.validateListFieldNotNull;
 import static org.metadatacenter.artifacts.model.core.ValidationHelper.validateMapFieldNotNull;
@@ -31,12 +33,18 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
   static ElementInstanceArtifact create(Map<String, URI> jsonLdContext, List<URI> jsonLdTypes, Optional<URI> jsonLdId,
     Optional<String> name, Optional<String> description, Optional<URI> createdBy, Optional<URI> modifiedBy,
     Optional<OffsetDateTime> createdOn, Optional<OffsetDateTime> lastUpdatedOn,
-    Map<String, List<FieldInstanceArtifact>> fieldInstances,
-    Map<String, List<ElementInstanceArtifact>> elementInstances,
+    List<String> childNames,
+    Map<String, FieldInstanceArtifact> singleInstanceFieldInstances,
+    Map<String, List<FieldInstanceArtifact>> multiInstanceFieldInstances,
+    Map<String, ElementInstanceArtifact> singleInstanceElementInstances,
+    Map<String, List<ElementInstanceArtifact>> multiInstanceElementInstances,
     Map<String, Map<String, FieldInstanceArtifact>> attributeValueFieldInstances)
   {
     return new ElementInstanceArtifactRecord(jsonLdContext, jsonLdTypes, jsonLdId, name, description, createdBy,
-      modifiedBy, createdOn, lastUpdatedOn, fieldInstances, elementInstances, attributeValueFieldInstances);
+      modifiedBy, createdOn, lastUpdatedOn, childNames,
+      singleInstanceFieldInstances, multiInstanceFieldInstances,
+      singleInstanceElementInstances, multiInstanceElementInstances,
+      attributeValueFieldInstances);
   }
 
   // NOTE: Even though this method looks almost identical to the equivalent method in the TemplateInstanceArtifact
@@ -45,48 +53,54 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
   {
     visitor.visitElementInstanceArtifact(this, path);
 
-    for (Map.Entry<String, List<FieldInstanceArtifact>> entry : fieldInstances().entrySet()) {
+    for (Map.Entry<String, FieldInstanceArtifact> entry : singleInstanceFieldInstances().entrySet()) {
+      String fieldName = entry.getKey();
+      String childBasePath = path + "/" + fieldName;
+      FieldInstanceArtifact fieldInstanceArtifact = entry.getValue();
+
+      fieldInstanceArtifact.accept(visitor, childBasePath);
+    }
+
+    for (Map.Entry<String, List<FieldInstanceArtifact>> entry : multiInstanceFieldInstances().entrySet()) {
       String fieldName = entry.getKey();
       String childBasePath = path + "/" + fieldName;
       List<FieldInstanceArtifact> fieldInstanceArtifacts = entry.getValue();
 
-      if (fieldInstanceArtifacts.size() == 1) {
-        FieldInstanceArtifact fieldInstanceArtifact = fieldInstanceArtifacts.get(0);
-        fieldInstanceArtifact.accept(visitor, childBasePath);
-      } else {
-        int childNumber = 0;
-        for (FieldInstanceArtifact fieldInstanceArtifact : fieldInstanceArtifacts) {
-          fieldInstanceArtifact.accept(visitor, childBasePath + "[" + childNumber + "]");
-          childNumber++;
-        }
+      int childNumber = 0;
+      for (FieldInstanceArtifact fieldInstanceArtifact : fieldInstanceArtifacts) {
+        fieldInstanceArtifact.accept(visitor, childBasePath + "[" + childNumber + "]");
+        childNumber++;
       }
     }
 
-    for (Map.Entry<String, List<ElementInstanceArtifact>> entry : elementInstances().entrySet()) {
+    for (Map.Entry<String, ElementInstanceArtifact> entry : singleInstanceElementInstances().entrySet()) {
+      String elementName = entry.getKey();
+      String childBasePath = path + "/" + elementName;
+      ElementInstanceArtifact elementInstanceArtifact = entry.getValue();
+
+      elementInstanceArtifact.accept(visitor, childBasePath);
+    }
+
+    for (Map.Entry<String, List<ElementInstanceArtifact>> entry : multiInstanceElementInstances().entrySet()) {
       String elementName = entry.getKey();
       String childBasePath = path + "/" + elementName;
       List<ElementInstanceArtifact> elementInstanceArtifacts = entry.getValue();
 
-      if (elementInstanceArtifacts.size() == 1) {
-        ElementInstanceArtifact elementInstanceArtifact = elementInstanceArtifacts.get(0);
-        elementInstanceArtifact.accept(visitor, childBasePath);
-      } else {
-        int childNumber = 0;
-        for (ElementInstanceArtifact elementInstanceArtifact : elementInstanceArtifacts) {
-          elementInstanceArtifact.accept(visitor, childBasePath + "[" + childNumber + "]");
-          childNumber++;
-        }
+      int childNumber = 0;
+      for (ElementInstanceArtifact elementInstanceArtifact : elementInstanceArtifacts) {
+        elementInstanceArtifact.accept(visitor, childBasePath + "[" + childNumber + "]");
+        childNumber++;
       }
     }
 
-    for (Map.Entry<String, Map<String, FieldInstanceArtifact>> entry : attributeValueFieldInstances().entrySet()) {
-      String attributeValueFieldName = entry.getKey();
+    for (Map.Entry<String, Map<String, FieldInstanceArtifact>> entry : attributeValueFieldInstanceGroups().entrySet()) {
+      String attributeValueFieldGroupName = entry.getKey();
       Map<String, FieldInstanceArtifact> perAttributeValueFieldInstances = entry.getValue();
 
       for (Map.Entry<String, FieldInstanceArtifact> perAttributeValueFieldInstanceNameAndInstance : perAttributeValueFieldInstances.entrySet()) {
         String attributeValueFieldInstanceName = perAttributeValueFieldInstanceNameAndInstance.getKey();
         FieldInstanceArtifact fieldInstanceArtifact = perAttributeValueFieldInstanceNameAndInstance.getValue();
-        String attributeValueFieldSpecificationPath = path + "/" + attributeValueFieldName;
+        String attributeValueFieldSpecificationPath = path + "/" + attributeValueFieldGroupName;
         String attributeValueFieldInstancePath = path + "/" + attributeValueFieldInstanceName;
 
         fieldInstanceArtifact.accept(visitor, attributeValueFieldInstancePath, attributeValueFieldSpecificationPath);
@@ -110,17 +124,21 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
     private Optional<URI> modifiedBy = Optional.empty();
     private Optional<OffsetDateTime> createdOn = Optional.empty();
     private Optional<OffsetDateTime> lastUpdatedOn = Optional.empty();
-    private final Map<String, List<FieldInstanceArtifact>> fieldInstances = new HashMap<>();
-    private final Map<String, List<ElementInstanceArtifact>> elementInstances = new HashMap<>();
+    private final List<String> childNames = new ArrayList<>();
+    private final Map<String, FieldInstanceArtifact> singleInstanceFieldInstances = new HashMap<>();
+    private final Map<String, List<FieldInstanceArtifact>> multiInstanceFieldInstances = new HashMap<>();
+    private final Map<String, ElementInstanceArtifact> singleInstanceElementInstances = new HashMap<>();
+    private final Map<String, List<ElementInstanceArtifact>> multiInstanceElementInstances = new HashMap<>();
     private final Map<String, Map<String, FieldInstanceArtifact>> attributeValueFieldInstanceGroups = new HashMap<>();
 
     private Builder()
     {
     }
 
-    public Builder withJsonLdContext(Map<String, URI> jsonLdContext)
+    public Builder withJsonLdContextEntry(String name, URI property)
     {
-      this.jsonLdContext = Map.copyOf(jsonLdContext);
+      this.jsonLdContext.put(name, property);
+
       return this;
     }
 
@@ -178,47 +196,90 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
       return this;
     }
 
-    public Builder withFieldInstance(String childFieldName, FieldInstanceArtifact fieldInstance)
+    public Builder withSingleInstanceFieldInstance(String childFieldName, FieldInstanceArtifact fieldInstance)
     {
-      if (fieldInstances.containsKey(childFieldName))
-        fieldInstances.get(childFieldName).add(fieldInstance);
-      else {
-        List<FieldInstanceArtifact> childFieldInstances = new ArrayList<>();
-        childFieldInstances.add(fieldInstance);
-        fieldInstances.put(childFieldName, childFieldInstances);
-      }
+      if (childNames.contains(childFieldName))
+        throw new IllegalArgumentException("child " + childFieldName + " already present in instance");
+
+      childNames.add(childFieldName);
+
+      singleInstanceFieldInstances.put(childFieldName, fieldInstance);
+
       return this;
     }
 
-    public Builder withElementInstance(String childElementName, ElementInstanceArtifact elementInstance)
+    public Builder withSingleInstanceElementInstance(String childElementName, ElementInstanceArtifact elementInstance)
     {
-      if (elementInstances.containsKey(childElementName))
-        elementInstances.get(childElementName).add(elementInstance);
-      else {
-        List<ElementInstanceArtifact> childElementInstances = new ArrayList<>();
-        childElementInstances.add(elementInstance);
-        elementInstances.put(childElementName, childElementInstances);
-      }
+      if (childNames.contains(childElementName))
+        throw new IllegalArgumentException("child " + childElementName + " already present in instance");
+
+      childNames.add(childElementName);
+
+      singleInstanceElementInstances.put(childElementName, elementInstance);
+
       return this;
     }
 
-    public Builder withElementInstances(String childElementName, List<ElementInstanceArtifact> childElementInstances)
+    public Builder withMultiInstanceFieldInstances(String childFieldName, List<FieldInstanceArtifact> childFieldInstances)
     {
-      this.elementInstances.put(childElementName, List.copyOf(childElementInstances));
+      if (childNames.contains(childFieldName))
+        throw new IllegalArgumentException("child " + childFieldName + " already present in instance");
+
+      childNames.add(childFieldName);
+
+      this.multiInstanceFieldInstances.put(childFieldName, List.copyOf(childFieldInstances));
+
       return this;
     }
 
-    public Builder withFieldInstances(String childFieldName, List<FieldInstanceArtifact> childFieldInstances)
+    public Builder withEmptyMultiInstanceFieldInstances(String childFieldName)
     {
-      this.fieldInstances.put(childFieldName, List.copyOf(childFieldInstances));
+      withMultiInstanceFieldInstances(childFieldName, Collections.emptyList());
+
       return this;
     }
 
-    public Builder withAttributeValueFieldInstances(String attributeValueFieldName,
+    public Builder withMultiInstanceElementInstances(String childElementName, List<ElementInstanceArtifact> childElementInstances)
+    {
+      if (childNames.contains(childElementName))
+        throw new IllegalArgumentException("child " + childElementName + " already present in instance");
+
+      childNames.add(childElementName);
+
+      this.multiInstanceElementInstances.put(childElementName, List.copyOf(childElementInstances));
+
+      return this;
+    }
+
+    public Builder withEmptyMultiInstanceElementInstances(String childFieldName)
+    {
+      withMultiInstanceElementInstances(childFieldName, Collections.emptyList());
+
+      return this;
+    }
+
+    public Builder withAttributeValueFieldGroup(String attributeValueFieldGroupName,
       Map<String, FieldInstanceArtifact> attributeValueFieldInstances)
     {
-      this.attributeValueFieldInstanceGroups.put(attributeValueFieldName,
-        Map.copyOf(attributeValueFieldInstances));
+      Set<String> attributeValueFieldInstanceNames = attributeValueFieldInstances.keySet();
+
+      if (childNames.contains(attributeValueFieldGroupName))
+        throw new IllegalArgumentException("child " + attributeValueFieldGroupName + " already present in instance");
+
+      childNames.add(attributeValueFieldGroupName);
+
+      Set<String> overlappingChildNames = attributeValueFieldInstanceNames.stream()
+        .filter(childName -> childNames.contains(childName))
+        .collect(Collectors.toSet());
+
+      if (!overlappingChildNames.isEmpty())
+        throw new IllegalArgumentException("at least one of field instance names " +
+          overlappingChildNames + " of attribute-value field " + attributeValueFieldGroupName +
+          " already present in parent instance");
+
+      childNames.addAll(attributeValueFieldInstanceNames);
+
+      this.attributeValueFieldInstanceGroups.put(attributeValueFieldGroupName, Map.copyOf(attributeValueFieldInstances));
 
       return this;
     }
@@ -226,7 +287,10 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
     public ElementInstanceArtifact build()
     {
       return new ElementInstanceArtifactRecord(jsonLdContext, jsonLdTypes, jsonLdId, name, description, createdBy,
-        modifiedBy, createdOn, lastUpdatedOn, fieldInstances, elementInstances, attributeValueFieldInstanceGroups);
+        modifiedBy, createdOn, lastUpdatedOn, childNames,
+        singleInstanceFieldInstances, multiInstanceFieldInstances,
+        singleInstanceElementInstances, multiInstanceElementInstances,
+        attributeValueFieldInstanceGroups);
     }
   }
 }
@@ -234,10 +298,13 @@ public non-sealed interface ElementInstanceArtifact extends InstanceArtifact, Pa
 record ElementInstanceArtifactRecord(Map<String, URI> jsonLdContext, List<URI> jsonLdTypes, Optional<URI> jsonLdId,
                                      Optional<String> name, Optional<String> description,
                                      Optional<URI> createdBy, Optional<URI> modifiedBy,
-                                      Optional<OffsetDateTime> createdOn, Optional<OffsetDateTime> lastUpdatedOn,
-                                      Map<String, List<FieldInstanceArtifact>> fieldInstances,
-                                      Map<String, List<ElementInstanceArtifact>> elementInstances,
-                                     Map<String, Map<String, FieldInstanceArtifact>> attributeValueFieldInstances)
+                                     Optional<OffsetDateTime> createdOn, Optional<OffsetDateTime> lastUpdatedOn,
+                                     List<String> childNames,
+                                     Map<String, FieldInstanceArtifact> singleInstanceFieldInstances,
+                                     Map<String, List<FieldInstanceArtifact>> multiInstanceFieldInstances,
+                                     Map<String, ElementInstanceArtifact> singleInstanceElementInstances,
+                                     Map<String, List<ElementInstanceArtifact>> multiInstanceElementInstances,
+                                     Map<String, Map<String, FieldInstanceArtifact>> attributeValueFieldInstanceGroups)
   implements ElementInstanceArtifact
 {
   public ElementInstanceArtifactRecord
@@ -251,15 +318,23 @@ record ElementInstanceArtifactRecord(Map<String, URI> jsonLdContext, List<URI> j
     validateOptionalFieldNotNull(this, modifiedBy, OSLC_MODIFIED_BY);
     validateOptionalFieldNotNull(this, createdOn, PAV_CREATED_ON);
     validateOptionalFieldNotNull(this, lastUpdatedOn, PAV_LAST_UPDATED_ON);
-    validateMapFieldNotNull(this, fieldInstances, "fieldInstances");
-    validateMapFieldNotNull(this, elementInstances, "elementInstances");
-    validateMapFieldNotNull(this, attributeValueFieldInstances, "attributeValueFieldInstances");
+    validateListFieldNotNull(this, childNames, "childNames");
+    validateMapFieldNotNull(this, singleInstanceFieldInstances, "singleInstanceFieldInstances");
+    validateMapFieldNotNull(this, multiInstanceFieldInstances, "multiInstanceFieldInstances");
+    validateMapFieldNotNull(this, singleInstanceElementInstances, "singleInstanceElementInstances");
+    validateMapFieldNotNull(this, multiInstanceElementInstances, "multiInstanceElementInstances");
+    validateMapFieldNotNull(this, attributeValueFieldInstanceGroups, "attributeValueFieldInstanceGroups");
+
+    // TODO check that all childFieldNames present in child instances maps and that there are no extra fields in maps
 
     jsonLdContext = Map.copyOf(jsonLdContext);
     jsonLdTypes = List.copyOf(jsonLdTypes);
-    fieldInstances = Map.copyOf(fieldInstances);
-    elementInstances = Map.copyOf(elementInstances);
-    attributeValueFieldInstances = Map.copyOf(attributeValueFieldInstances);
+    childNames = List.copyOf(childNames);
+    singleInstanceFieldInstances = Map.copyOf(singleInstanceFieldInstances);
+    multiInstanceFieldInstances = Map.copyOf(multiInstanceFieldInstances);
+    singleInstanceElementInstances = Map.copyOf(singleInstanceElementInstances);
+    multiInstanceElementInstances = Map.copyOf(multiInstanceElementInstances);
+    attributeValueFieldInstanceGroups = Map.copyOf(attributeValueFieldInstanceGroups);
   }
 }
 
